--- a/src/css/App.css
+++ b/src/css/App.css
@@ -13,7 +13,7 @@
   margin: 0 0 15px 0;
 	padding: 0;
   letter-spacing: 0.1em;
-  margin-top: 100px;
+  padding-top: 50px;
 }
 
 .COLORED {
@@ -24,8 +24,8 @@
   text-align: center;
 }
 
-.header, .banner{
-  --main-color: rgb(247, 140, 104);
+.header, .banner {
+  --main-color:  rgb(12, 29, 129);
 }
 
 .empty {
@@ -45,7 +45,7 @@
 	width: 250px;
 	height: 3px;
 	padding: 0!important;
-  background : rgb(241, 166, 141);
+  background : rgb(12, 29, 129);
   margin-top: -15px;
   margin-bottom: 45px;
 }
@@ -56,8 +56,44 @@
 	float: none;
 }
 
+.img-centered {
+  position:relative;
+}
+
+.img-centered img{
+	margin-left: auto;
+	margin-right: auto;
+  display: block;
+}
+
+.img-centered:after {
+  content: attr(data-content);
+  color:#fff;
+  position:absolute;
+  width:100%; height:100%;
+  top:0; left:0;
+  background:rgba(0,0,0,0.75);
+  font-family: "Helvetica", sans-serif, monospace;
+  text-align: center;
+  opacity:0;
+  transition: all 0.5s;
+  padding-top:  10px;
+  -webkit-transition: all 0.5s;
+}
+.img-centered:hover:after {
+  opacity:1;
+}
+
+
+
 .greybackground {
   background-color: rgb(233, 233, 233);
+}
+
+.bullet {
+  color:  rgb(12, 29, 129);
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .block {
@@ -112,6 +148,13 @@
   margin-left: 20px;
 }
 
+.header .header-logo {
+  float: right;
+  margin-right: 15px;
+  padding-top: 6px;
+  color: white;
+}
+
 .header .header-menu a {
   margin-right: 25px;
   font-weight: normal;
@@ -136,6 +179,10 @@
   }
 
   .header .header-logo {
+    display: none;
+  }
+
+  .header-sticky {
     display: none;
   }
 
@@ -233,13 +280,20 @@
     right: 25%;
     left: 25%;
   }
+
+  .heading-site {
+    font-size: 1.5em;
+  }
 }
 
 
 /* ########## ABOUT ########## */
 
-.about .about-single-element {
-  text-align: center;
+.about .about-single-element h3 {
+  font-weight: bold;
+	line-height: 70px;
+  text-transform: uppercase;
+  top: 0;
 }
 
 .about .about-single-element .icon{
@@ -261,26 +315,41 @@
   color : var(--main-color);
 }
 
+.about .pp-image {
+  width: 25vh;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 15px;
+}
+
+.about .footer-contact-informations {
+  text-align: center;
+  margin-top: 10px;
+}
+
+
+
 /* SKILLS */
 
 .skills .my-columns {
   transition: all 400ms;
 }
 
-.skills .my-columns:hover {
+.skills .my-column {
+  transform: scale(1);
+  text-align: center;
+  transition: all 400ms;
+}
+
+.skills .my-column:hover {
   transform: scale(1.1);
   color : var(--main-color);
 }
 
-.skills .my-column {
-  transform: scale(1);
+.skills .my-icon {
   text-align: center;
-}
-
-.skills .my-progress {
-  color: green;
-  caret-color: blue;
-  text-align: center;
+  transition: all 400ms;
 }
 
 .skills .my-icon {
@@ -292,23 +361,62 @@
   text-align: center;
   width: 2rem;
   height: 2rem;
+}
 
+.skills h3 {
+  font-weight: bold;
+	line-height: 50px;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+}
+
+.wrapper {
+  text-align: center;
+}
+
+/* EXPERIENCE */
+.mysubtitle{
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  display:inline;
 }
 
 
 /* FOOTER */
+
+.footer {
+  background: none;
+}
+
 .footer .footer-contact-informations {
   text-align: center;
   margin-top: 30px;
+  margin-bottom: 0;
+  bottom: 5px;
 }
 
-.footer .footer-contact-informations ul {
+.footer-contact-informations ul {
   padding: 0;
 }
 
-.footer .footer-contact-informations ul li {
+.footer-contact-informations ul li {
   display: inline-block;
   list-style-type: none;
   margin-left: 10px;
   font-size: 30px;
+  color: none;
+}
+
+.footer .mybutton {
+  background: rgb(12, 29, 129);
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-size: medium;
+  width: 12rem;
+  height: 4rem;
+}
+
+.footer .mybutton:hover {
+  background: rgb(9, 23, 100);
 }
