--- a/src/css/App.css
+++ b/src/css/App.css
@@ -78,7 +78,7 @@
   width: 70%;
 }
 
-.img-centered:after {
+/* .img-centered:after {
   content: attr(data-content);
   color:#fff;
   position:absolute;
@@ -94,7 +94,7 @@
   left: 0;
   right: 0;
   margin: auto;
-}
+} */
 .img-centered:hover:after {
   opacity:1;
 }
